<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetMe</string>
    
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_confirm_button">Login</string>
    <string name="register_confirm_button">Register</string>
    <string name="create_confirm_button">Create</string>
    <string name="back">Back</string>
    <string name="blank_text">    </string>
    
    <string name="profile_default_name">Name</string>
    <string name="profile_default_company">Company</string>
    <string name="profile_default_position">Position</string>
    <string name="profile_default_email">email</string>
    <string name="profile_default_phone">phone</string>
    <string name="profile_default_twitter">twitter</string>
    <string name="profile_default_web">website</string>
    <string name="profile_comment">Comment</string>
    <string name="profile_location">Location</string>
    <string name="sync">Publish</string>
    
    <string name="edit_profile">Edit</string>
    <string name="change_profile_image">Image...</string>
    <string name="change_twitter_account">Change</string>
	<string name="save_changes">Save changes</string>
	<string name="add_contact">Add to contacts</string>
	<string name="delete_contact">Delete contact</string>
	
	<string name="add_comment">Add a comment:</string>
	<string name="add_location">Add a location</string>
	
	<string name="settings_logout">Logout</string>
	<string name="settings_delete_user">Delete current user</string>
	<string name="sync_confirm">By sending your data to the web, you are making it accessible to all users of this application. Are you sure you want to do it?</string>
	<string name="sync_ok">Ok</string>
	<string name="sync_cancel">Cancel</string>
</resources>