<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username_box"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/login_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <ViewFlipper
        android:id="@+id/login_flip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/login_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_confirm_button" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="changeToRegister"
                android:text="@string/register_confirm_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <EditText
		        android:id="@+id/password_confirm_box"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/login_password"
		        android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/back_to_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="changeToLogin"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/create_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_confirm_button" />

            </LinearLayout>

        </LinearLayout>

    </ViewFlipper>

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text" />

</LinearLayout>