<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:minWidth="300dp" 
  	android:minHeight="400dp">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
       android:id="@+id/add_contact_image"
       android:layout_width="wrap_content"
       android:layout_height="fill_parent"
       android:layout_marginRight="6dip"
       android:src="@drawable/ic_launcher" />
	   
	   <LinearLayout
	       android:orientation="vertical"
	       android:layout_width="0dip"
	       android:layout_weight="1"
	       android:layout_height="fill_parent">
	
	        <TextView
	            android:id="@+id/add_contact_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/profile_default_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <LinearLayout
	            android:id="@+id/linearLayout1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/add_contact_company"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/profile_default_company" />
	
	            <TextView
	                android:id="@+id/add_contact_position"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:text="@string/profile_default_position" />
	
	        </LinearLayout>
	
	    </LinearLayout>
	    
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/add_comment" />

    <EditText
        android:id="@+id/add_contact_comment_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/add_location" />

    <EditText
        android:id="@+id/add_contact_location_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip" />

    <Button
        android:id="@+id/add_contact_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact" />

</LinearLayout>