<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <EditText
        android:id="@+id/username_box"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/login_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_box"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:layout_gravity="center"
        android:inputType="textPassword" />
    
    <EditText
                android:id="@+id/password_confirm_box"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"            
                android:hint="@string/login_password"
                android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text" />

</LinearLayout>