<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip" >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:src="@drawable/default_profile" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:layout_weight="0.7"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profile_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/profile_default_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/profile_company_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/profile_default_company"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/profile_position_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:text="@string/profile_default_position"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/dark_grey" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <TextView
                android:id="@+id/profile_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_margin="5dip"
                android:text="@string/profile_default_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_grey" />

            <ImageView
                android:id="@+id/ic_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_margin="5dip"
                android:src="@drawable/ic_email" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/profile_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_margin="5dip"
                android:text="@string/profile_default_phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_grey" />

            <ImageView
                android:id="@+id/ic_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_margin="5dip"
                android:src="@drawable/ic_phone" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/profile_twitter_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_margin="5dip"
                android:text="@string/profile_default_twitter"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_grey" />

            <ImageView
                android:id="@+id/ic_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_margin="5dip"
                android:src="@drawable/ic_twitter" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/profile_web_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_margin="5dip"
                android:text="@string/profile_default_web"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_grey" />

            <ImageView
                android:id="@+id/ic_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_margin="5dip"
                android:src="@drawable/ic_web" />
            
        </TableRow>
    </TableLayout>

</LinearLayout>