<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contacts_flipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top"
        android:orientation="vertical"
        android:padding="5dip"
        android:paddingTop="10dip" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip" >

            <EditText
                android:id="@+id/contacts_search_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/contacts_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:onClick="searchForUsers"
                android:src="@drawable/ic_search" />
        </LinearLayout>

        <ListView
            android:id="@+id/contacts_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >
        </ListView>
    </LinearLayout>

    <ScrollView
        android:id="@+id/contacts_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/beige"
            android:gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip" >

                <ImageView
                    android:id="@+id/contact_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:adjustViewBounds="true"
                    android:background="@color/beige"
                    android:src="@drawable/default_profile" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="0.7"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/contact_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_name"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/contact_company_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_company"/>

                    <TextView
                        android:id="@+id/contact_position_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_position" />
                </LinearLayout>
            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:stretchColumns="*" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <TextView
                        android:id="@+id/contact_email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_email"/>

                    <ImageView
                        android:id="@+id/ic_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:layout_margin="5dip"
                        android:src="@drawable/ic_email" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/contact_phone_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_phone"/>

                    <ImageView
                        android:id="@+id/ic_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:layout_margin="5dip"
                        android:src="@drawable/ic_phone" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/contact_web_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_web"/>

                    <ImageView
                        android:id="@+id/ic_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:layout_margin="5dip"
                        android:src="@drawable/ic_web" />
                </TableRow>

                <TableRow
                    android:id="@+id/contact_twitter_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/contact_twitter_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:layout_margin="5dip"
                        android:text="@string/profile_default_twitter"/>

                    <ImageView
                        android:id="@+id/ic_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|left"
                        android:layout_margin="5dip"
                        android:src="@drawable/ic_twitter" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/contact_save_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="10dip"
                    android:onClick="showDeleteContactDialog"
                    android:text="@string/delete_contact" />

                <Button
                    android:id="@+id/contact_back_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:onClick="changeToSearchView"
                    android:text="@string/back" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</ViewFlipper>